--- a/client/resume/achievements.html
+++ b/client/resume/achievements.html
@@ -16,10 +16,10 @@
 			</p>
 
 			<h3>Engineering Management</h3>
-
-			Veolia standards
-
-			MSSF bid specification
+			<ul>
+				<li>Veolia standards</li>
+				<li>MSSF bid specification</li>
+			</ul>
 
 
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
@@ -27,7 +27,9 @@
 
 			<h3>Shutdown Management</h3>
 
-			Norske Skog Albury PM shutdown.
+			<ul>
+			<li>Norske Skog Albury PM shutdown.</li>
+			</ul>
 
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
 			</p>
@@ -39,8 +41,10 @@
 			<h3>Business Process Improvement</h3>
 
 			<h4>MIPAC</h4>
-			Quotation management system
-			Quotation templates and support materials
+			<ul>
+				<li>Quotation management system</li>
+				<li>Quotation templates and support materials</li>
+			</ul>
 
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
 			</p>
@@ -49,8 +53,10 @@
 			<h3>Business Development</h3>
 
 			<h4>Serck Controls</h4>
-			Diversified client base from utilities only into manufacturing (Flecture Building & CoreGas)
-			Quotation management and approval system
+			<ul>
+				<li>Diversified client base from utilities only into manufacturing (Flecture Building & CoreGas)</li>
+				<li>Quotation management and approval system</li>
+			</ul>
 
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
 			</p>
