--- a/client/resume/history.html
+++ b/client/resume/history.html
@@ -33,7 +33,16 @@
                             <img src="http://placehold.it/200x300" />
                         </div>
                         
-                        <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.</p>
+                        <p>
+                            Veolia is a global leader in environmental solutions. Veolia works closely with all levels of government and some of Australia and New Zealand’s largest industrial and commercial companies to help them reach their sustainability goals; providing them with large-scale innovative water, energy and waste solutions.
+                        </p>
+                        <p>
+                            Across Australia and New Zealand, Veolia employs over 4000 staff in 150 locations of which a total of 117 are operational sites.
+                        </p>
+                        <p>
+                            Principle electrical engineer responsible for supporting in excess of 100 operational sites in the water, waste and energy divisions across Australia and New Zealand.
+                        </p>
+
                     </div>
                 </div>
             </div>
@@ -65,7 +74,14 @@
                     <div class="panel-body">
                         <div class="photoholder">
                             <img src="http://placehold.it/200x300/f00" />
-                        </div>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.</div>
+                        </div>
+                        <p>
+                            Veolia Water is a world leader in water and wastewater services and specialises in the management of these services on behalf of public authorities and industry.
+                        </p>
+                        <p>
+                            Principle electrical engineer responsible for supporting over 70 water treatment sites across Australia and New Zealand.
+                        </p>
+                    </div>
                 </div>
             </div>
 
@@ -73,24 +89,33 @@
         	<!-- SERCK CONTROL -->
 
             <div class="panel panel-default">
+
                 <div class="panel-heading" role="tab" id="heading3">
-                    <div class=" icon"> <i class="glyphicon glyphicon-one-fine-dot"></i>
-
-                    </div>
-                     <h4 class="panel-title">
-				        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse3" aria-expanded="false" aria-controls="collapse3">
-          					2006 - 2008
-        				</a>
-        				<img src="/serck-logo.jpg" />
-        				<h5>Sydney Manager</h5>        				
-      				</h4>
-
+                    <div class=" icon"> <i class="glyphicon glyphicon-one-fine-dot"></i></div>
+                    <table class="panel-title">
+                        <tr>
+                            <td>
+                                <h5 class="panel-title">
+                                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse3" aria-expanded="true" aria-controls="collapse3">
+                                        2006 - 2008
+                                    </a>
+                                </h5>
+                            </td>
+                            <td><img src="/serck-logo.jpg" /></td>
+                        </tr>
+                        <tr><td>Serck Controls</td></tr>                    
+                        <tr><td>Sydney Manager</td></tr>
+                    </table>
                 </div>
                 <div id="collapse3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading3">
                     <div class="panel-body">
                         <div class="photoholder">
                             <img src="http://placehold.it/200x300/f00" />
-                        </div>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.</div>
+                        </div>
+                        <p>
+                            Manager of Serck Controls Sydney office which included a major projects team, service group and product repair section.
+                        </p>
+                    </div>
                 </div>
             </div>
 
@@ -98,24 +123,37 @@
         	<!-- MIPAC -->
 
             <div class="panel panel-default">
+
                 <div class="panel-heading" role="tab" id="heading4">
-                    <div class=" icon"> <i class="glyphicon glyphicon-one-fine-dot"></i>
-
-                    </div>
-                     <h4 class="panel-title">
-				        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse4" aria-expanded="false" aria-controls="collapse4">
-          					2004 - 2006
-        				</a>
-        				<img src="/mipac-logo.png" />
-        				<h5>Account Manager - Pulp and Paper</h5>        				
-      				</h4>
-
+                    <div class=" icon"> <i class="glyphicon glyphicon-one-fine-dot"></i></div>
+                    <table class="panel-title">
+                        <tr>
+                            <td>
+                                <h5 class="panel-title">
+                                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse4" aria-expanded="true" aria-controls="collapse4">
+                                        2004 - 2006
+                                    </a>
+                                </h5>
+                            </td>
+                            <td><img src="/mipac-logo.png" /></td>
+                        </tr>
+                        <tr><td>MIPAC</td></tr>                    
+                        <tr><td>Account Manager - Pulp and Paper</td></tr>
+                    </table>
                 </div>
+
                 <div id="collapse4" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading4">
                     <div class="panel-body">
                         <div class="photoholder">
                             <img src="http://placehold.it/200x300/f00" />
-                        </div>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.</div>
+                        </div>
+                        <p>
+                            MIPAC are consulting engineers specializing in Process Automation and Control. MIPAC have traditionally concentrated on the mining industry. In 2002 a Pulp and Paper section was established based in Albury, NSW.
+                        </p>
+                        <p>
+                            Responsibilities in this position included deputy branch office manager, account management and business development in the Pulp and Paper industry.
+                        </p>
+                    </div>
                 </div>
             </div>
 
@@ -123,24 +161,36 @@
         	<!-- MIPAC -->
 
             <div class="panel panel-default">
-                <div class="panel-heading" role="tab" id="heading4">
-                    <div class=" icon"> <i class="glyphicon glyphicon-one-fine-dot"></i>
-
-                    </div>
-                     <h4 class="panel-title">
-				        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse5" aria-expanded="false" aria-controls="collapse5">
-          					2004 - 2006
-        				</a>
-        				<img src="/mipac-logo.png" />
-        				<h5>Lead Project Engineer</h5>        				
-      				</h4>
-
+                <div class="panel-heading" role="tab" id="heading5">
+                    <div class=" icon"> <i class="glyphicon glyphicon-one-fine-dot"></i></div>
+                    <table class="panel-title">
+                        <tr>
+                            <td>
+                                <h5 class="panel-title">
+                                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse5" aria-expanded="true" aria-controls="collapse5">
+                                        2004 - 2006
+                                    </a>
+                                </h5>
+                            </td>
+                            <td><img src="/mipac-logo.png" /></td>
+                        </tr>
+                        <tr><td>MIPAC</td></tr>                    
+                        <tr><td>Lead Project Engineer</td></tr>
+                    </table>
                 </div>
+
                 <div id="collapse5" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading5">
                     <div class="panel-body">
                         <div class="photoholder">
                             <img src="http://placehold.it/200x300/f00" />
-                        </div>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.</div>
+                        </div>
+                        <p>
+                            MIPAC are consulting engineers specializing in Process Automation and Control. MIPAC have traditionally concentrated on the mining industry. In 2002 a Pulp and Paper section was established based in Albury, NSW.
+                        </p>
+                        <p>
+                            Responsibilities included leading project teams and project management.
+                        </p>
+                    </div>
                 </div>
             </div>
 
@@ -148,24 +198,37 @@
         	<!-- POYRY -->
 
             <div class="panel panel-default">
+
                 <div class="panel-heading" role="tab" id="heading6">
-                    <div class=" icon"> <i class="glyphicon glyphicon-one-fine-dot"></i>
-
-                    </div>
-                     <h4 class="panel-title">
-				        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse6" aria-expanded="false" aria-controls="collapse6">
-          					1993 - 2004
-        				</a>
-        				<img src="/poyry-logo-1.jpg" />
-        				<h5>Design Engineer</h5>        				
-      				</h4>
-
+                    <div class=" icon"> <i class="glyphicon glyphicon-one-fine-dot"></i></div>
+                    <table class="panel-title">
+                        <tr>
+                            <td>
+                                <h5 class="panel-title">
+                                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse6" aria-expanded="true" aria-controls="collapse6">
+                                        1993 - 2004
+                                    </a>
+                                </h5>
+                            </td>
+                            <td><img src="/poyry-logo-1.jpg" /></td>
+                        </tr>
+                        <tr><td>Jaakko Poyry</td></tr>                    
+                        <tr><td>Design Engineer</td></tr>
+                    </table>
                 </div>
+
                 <div id="collapse6" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading6">
                     <div class="panel-body">
                         <div class="photoholder">
                             <img src="http://placehold.it/200x300/f00" />
-                        </div>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.</div>
+                        </div>
+                        <p>
+                            The Jaakko Pöyry group is a multi-disciplined engineering consultancy with a global office network concentrating primarily on the Pulp and Paper Industry and Energy sectors.
+                        </p>
+                        <p>
+                            Between 1993 and 2004 worked for several companies within the Jaakko Pöyry group as a Design Engineer with responsibilities primarily in the Process Automation area but also Electrical Engineering, Process Engineering and Software Development.
+                        </p>
+                    </div>
                 </div>
             </div>
 
@@ -173,24 +236,41 @@
         	<!-- SECV -->
 
             <div class="panel panel-default">
-                <div class="panel-heading" role="tab" id="heading6">
-                    <div class=" icon"> <i class="glyphicon glyphicon-one-fine-dot"></i>
 
-                    </div>
-                     <h4 class="panel-title">
-				        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse7" aria-expanded="false" aria-controls="collapse7">
-          					1992
-        				</a>
-        				<img style="width:50px;height:50px;" src="/SECV-logo.jpg" />
-        				<h5>Electrical Engineer</h5>        				
-      				</h4>
-
+                <div class="panel-heading" role="tab" id="heading7">
+                    <div class=" icon"> <i class="glyphicon glyphicon-one-fine-dot"></i></div>
+                    <table class="panel-title">
+                        <tr>
+                            <td>
+                                <h5 class="panel-title">
+                                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse7" aria-expanded="true" aria-controls="collapse7">
+                                        1992
+                                    </a>
+                                </h5>
+                            </td>
+                            <td><img style="width:50px;height:50px;" src="/SECV-logo.jpg" /></td>
+                        </tr>
+                        <tr><td>State Electricity Commision of Victoria (SECV)</td></tr>                    
+                        <tr><td>Electrical Engineer</td></tr>
+                    </table>
                 </div>
+
                 <div id="collapse7" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading7">
                     <div class="panel-body">
                         <div class="photoholder">
                             <img src="http://placehold.it/200x300/f00" />
-                        </div>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.</div>
+                        </div>
+                        <p>
+                            The State Electricity Commission of Victoria was a vertically integrated electricity producer and distributor in the state of Victoria.
+                        </p>
+                        <p>
+                            As a member of the Sub-transmission Planning Department, responsibilities included,
+                        </p>
+                        <ul>
+                            <li>Preparation of load flow and fault level analysis for the sub transmission system</li>
+                            <li>Made recommendations regarding system capacity and various options to remedy operational difficulties</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
 
