--- a/client/resume/sidebar.html
+++ b/client/resume/sidebar.html
@@ -38,7 +38,7 @@
 			<li role="presentation" class="{{checkActiveMenuItem 'history'}}"><a href="/resume/history">Employment History</a></li>
 			<li role="presentation" class="disabled"><a href="#">Employers</a></li>
 			<li role="presentation" class="disabled"><a href="#">Projects</a></li>
-			<li role="presentation" class="disabled"><a href="#">Expereince</a></li>
+			<li role="presentation" class="{{checkActiveMenuItem 'experience'}}"><a href="/resume/experience">Expereince</a></li>
 			<li role="presentation" class="disabled"><a href="#">Skills</a></li>
 			<li role="presentation" class="{{checkActiveMenuItem 'qualifications'}}"><a href="/resume/qualifications">Qualifications & Certifications</a></li>
 			<li role="presentation" class="{{checkActiveMenuItem 'training'}}"><a href="/resume/training">Training</a></li>
